<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/form_students_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_student_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/form_students_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_student_birthday"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/form_students_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_student_email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/form_students_add"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@color/colorBtnGreen"
        android:text="@string/form_student_add"
        android:textColor="@color/colorWhite"/>
</LinearLayout>