<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/form_exam_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_exam_subject" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/form_exam_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_exam_date" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/form_exam_add"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@color/colorBtnGreen"
        android:text="@string/form_exam_btn"
        android:textColor="@color/colorWhite" />
</LinearLayout>